# vscodeee

./: .editorconfig  .eslint-ignore  .gitignore  CHANGELOG.md  LICENSE.txt  README.ja.md  README.md  ThirdPartyNotices.txt  eslint.config.js  package-lock.json  package.json  product.json
.eslint-plugin-local/: code-import-patterns.ts
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: retry.sh
.github/workflows/: add-to-project.yml  ci.yml  publish.yml
cli/src/: constants.rs
extensions/github-authentication/: package.json  package.nls.json
extensions/open-remote-ssh/: package.json
extensions/vscode-api-tests/: package.json
scripts/: bundle-node-modules.mjs  check-csp-hash.mjs  check-csp-hash.sh  check-deps.sh  code-agent-host.sh  code-cli.bat  code-cli.sh  code-server.bat  code-server.sh  code.bat  code.sh  dev-win.mjs  download-bun.mjs  download-node.mjs  generate-css-modules.mjs
src/: bootstrap-esm-resolve.ts  bootstrap-esm.ts  bootstrap-node.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_server.rs  lib.rs  logging.rs  main.rs
src-tauri/src/cli/: args.rs  completion.rs  dispatch.rs  extension_cli.rs  mod.rs  parser.rs  router.rs  uri.rs
src-tauri/src/commands/: extension_management.rs  extensions.rs  file_watcher.rs  filesystem.rs  ipc_channel.rs  mod.rs  native_host.rs  secret_storage.rs  spawn_exthost.rs  terminal.rs  transparency.rs  window.rs
src-tauri/src/commands/native_host/: clipboard.rs  error.rs  lifecycle.rs  misc.rs  mod.rs  network.rs  os.rs  power.rs  screenshot.rs  shell.rs  window.rs
src-tauri/src/commands/updater/: commands.rs  error.rs  mod.rs
src-tauri/src/exthost/: handshake.rs  init_data.rs  mod.rs  protocol.rs  sidecar.rs  ws_relay.rs
src-tauri/src/ipc/: channel.rs  event_bus.rs  mod.rs
src-tauri/src/protocol/: error.rs  headers.rs  mime.rs  mod.rs  roots.rs  uri.rs
src-tauri/src/pty/: autoreply.rs  instance.rs  manager.rs  mod.rs  profiles.rs  state.rs
src-tauri/src/shutdown/: coordinator.rs  mod.rs
src-tauri/src/system_events/: mod.rs  monitor.rs  platform_linux.rs  platform_macos.rs  platform_windows.rs
src-tauri/src/window/: chrome.rs  events.rs  manager.rs  menu.rs  mod.rs  quit_state.rs  restore.rs  restore_geometry.rs  session.rs  settings.rs  state.rs
src/vs/: amdX.ts  monaco.d.ts
(+396 files in other folders)
