[package]
name = "vscodee"
version = "0.1.0"
description = "VS Code fork powered by Tauri 2.0"
authors = ["j4rviscmd"]
edition = "2021"

[lib]
name = "vscodee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
dirs = "6"
tokio = { version = "1", features = ["net", "process", "io-util", "rt", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
