[package]
name = "vscodeee"
version = "0.1.0"
description = "VS Code fork powered by Tauri 2.0"
authors = ["j4rviscmd"]
edition = "2021"

[lib]
name = "vscodeee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
dirs = "6"
tokio = { version = "1", features = ["net", "process", "io-util", "rt", "macros", "time", "sync"] }
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.9"
base64 = "0.22"
libc = "0.2"
open = "5"
log = "0.4"
tauri-plugin-log = "2"
time = "0.3"
notify = { version = "8", features = ["serde"] }
notify-debouncer-full = "0.5"
globset = "0.4"
trash = "5"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
zip = "2"
notify-rust = "4"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
aes-gcm = "0.10"
rand = "0.8"
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# macOS Keychain ACL control — used to set permissive ACL on the master
# encryption key so that different worktree binaries can access it
# without triggering password prompts.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
security-framework-sys = "2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
